完成视频文件合并功能

--- a/2-video_audio_advanced/2-video_audio_advanced.xcodeproj/xcshareddata/xcschemes/2-video_audio_advanced.xcscheme
+++ b/2-video_audio_advanced/2-video_audio_advanced.xcodeproj/xcshareddata/xcschemes/2-video_audio_advanced.xcscheme
@@ -50,6 +50,12 @@
             ReferencedContainer = "container:2-video_audio_advanced.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "/Users/apple/devoloper/mine/ffmpeg/ffmpeg-demo/filesources/ll.mpg"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
