--- a/demo-ios/demo-ios/Info.plist
+++ b/demo-ios/demo-ios/Info.plist
@@ -60,5 +60,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>11</string>
+	<key>NSCameraUsageDescription</key>
+	<string>222</string>
 </dict>
 </plist>
